Change default Collegicoin Folder

--- a/contrib/init/collegicoind.conf
+++ b/contrib/init/collegicoind.conf
@@ -4,12 +4,12 @@ start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
 env CLGD_BIN="/usr/bin/collegicoind"
-env CLGD_USER="collegicoincore"
-env CLGD_GROUP="collegicoincore"
+env CLGD_USER="collegicoin"
+env CLGD_GROUP="collegicoin"
 env CLGD_PIDDIR="/var/run/collegicoind"
 # upstart can't handle variables constructed with other variables
 env CLGD_PIDFILE="/var/run/collegicoind/collegicoind.pid"
-env CLGD_CONFIGFILE="/etc/collegicoincore/collegicoin.conf"
+env CLGD_CONFIGFILE="/etc/collegicoin/collegicoin.conf"
 env CLGD_DATADIR="/var/lib/collegicoind"
 
 expect fork
