--- a/qa/pull-tester/run-collegicoind-for-test.sh.in
+++ b/qa/pull-tester/run-collegicoind-for-test.sh.in
@@ -3,7 +3,7 @@
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 #
-DATADIR="@abs_top_builddir@/.collegicoincore"
+DATADIR="@abs_top_builddir@/.collegicoin"
 rm -rf "$DATADIR"
 mkdir -p "$DATADIR"/regtest
 touch "$DATADIR/regtest/debug.log"
